# intro-to-ai

./: .env.example  .gitignore  CONTRIBUTING.md  COURSE_STRUCTURE.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
1_search/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  WEEK1_COMPLETE.md  pathfinding_app.py
2_knowledge/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  logic_solver.py
3_uncertainty/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  diagnosis_app.py
4_optimization/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  scheduler_app.py
5_learning/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  ml_app.py
6_neural_networks/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  nn_app.py
7_language/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  nlp_app.py
guides/: 01_python_refresher.ipynb
setup/: SETUP-mac.md
